# vscode_base

./: .gitignore  .mxproject  CMakeLists.txt  Makefile  STM32-for-VSCode.config.yaml  STM32Make.make  vscode_base.ioc
Core/Inc/: stm32l4xx_hal_conf.h
Core/Src/: buttonTest.c  gtest.cpp  main.c
Drivers/CMSIS/Device/ST/STM32L4xx/Include/: stm32l476xx.h
report/: lab_report.tex  report_template.tex
